--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,87 @@
+# Node modules
 node_modules/
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Runtime data
+pids/
+*.pid
+*.seed
+*.pid.lock
+
+# Dependency directories
+jspm_packages/
+
+# Build output
+dist/
+build/
+out/
+
+# Cache and temporary files
+.cache/
+.tmp/
+temp/
+.vscode/
+.idea/
+.DS_Store
+*.swp
+*.swo
+
+# Environment variables
 .env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Editor and system files
+.vscode/
+.idea/
+*.iml
+Thumbs.db
+.DS_Store
+*.bak
+
+# Testing
+coverage/
+.nyc_output/
+
+# Parcel-bundler cache
+.cache/
+
+# Webpack cache
+.webpack/
+
+# TypeScript
+*.tsbuildinfo
+
+# Yarn & npm
+yarn.lock
+package-lock.json
+
+# IDE-specific files
+.vscode/
+*.code-workspace
+
+# ESLint cache
+.eslintcache
+
+# Prettier
+.prettiercache
+
+# Ignore macOS system files
+.DS_Store
+
+# Ignore Linux swap files
+*.swp
+
+# Ignore Windows Thumbs.db files
+Thumbs.db
+
+# Ignore lockfiles
+pnpm-lock.yaml
