--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "assignment1",
   "version": "1.0.0",
   "description": "",
-  "main": "src/app.js",
-  "type": "module",
+  "main": "dist/app.js",
   "scripts": {
-    "dev": "nodemon src/app.js",
-    "start": "node src/app.js"
+    "dev": "nodemon --exec ts-node src/app.ts",
+    "test": "tsc && jest --detectOpenHandles --forceExit",
+    "start": "tsc && node dist/app.js",
+    "lint": "eslint . --ext .ts",
+    "devstart": "nodemon ./src/app.ts"
   },
   "author": "Michali and Shir",
   "license": "ISC",
@@ -14,10 +16,21 @@
     "body-parser": "^1.20.3",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "http-status": "^2.0.0",
+    "http-status": "^2.1.0",
     "mongoose": "^8.8.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.7"
+    "@eslint/js": "^9.17.0",
+    "@types/express": "^4.17.1",
+    "@types/jest": "^29.5.14",
+    "eslint": "^9.17.0",
+    "globals": "^15.14.0",
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.9",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.5",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.2",
+    "typescript-eslint": "^8.19.1"
   }
 }
