--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "nodemon --exec ts-node src/app.ts",
     "test": "tsc && jest --detectOpenHandles --forceExit",
+    "testAuth": "cp .env_test .env && jest --detectOpenHandles --forceExit auth.test.ts --coverage",
     "start": "tsc && node dist/app.js",
     "lint": "eslint . --ext .ts",
     "devstart": "nodemon ./src/app.ts"
@@ -27,6 +28,7 @@
     "@types/express": "^4.17.1",
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/supertest": "^6.0.2",
     "eslint": "^9.17.0",
     "globals": "^15.14.0",
     "jest": "^29.7.0",
