--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,5 @@
     "resolveJsonModule": true
   },
   "lib": ["es2015"],
-  "include": ["src/**/*", "types/ITokens.ts"]
+  "include": ["src/**/*"]
 }
