--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test:coverage": "tsc && jest --detectOpenHandles --forceExit --coverage",
     "testAuth": "cp .env.test.local .env && jest --detectOpenHandles --forceExit auth.test.ts",
     "testPosts": "cp .env.test.local .env && jest --detectOpenHandles --forceExit posts.test.ts",
+    "testComments": "cp .env.test.local .env && jest --detectOpenHandles --forceExit comments.test.ts",
     "start": "tsc && node dist/app.js",
     "lint": "eslint . --ext .ts",
     "devstart": "nodemon ./src/app.ts"
